# SuprematistArticleFinder

./: .replit  Dockerfile  Pasted-GET-https-308c4491-49f2-4a6a-a5f6-36a31df7e43b-00-454bd2oi6qbi-pike-replit-dev-search-q-quantum-co-1733683321135.txt  Pasted-GET-https-308c4491-49f2-4a6a-a5f6-36a31df7e43b-00-454bd2oi6qbi-pike-replit-dev-search-q-quantum-co-1733739805051.txt  Pasted-POST-https-308c4491-49f2-4a6a-a5f6-36a31df7e43b-00-454bd2oi6qbi-pike-replit-dev-search-200-Reques-1733774564021.txt  Pasted-import-os-import-json-import-logging-import-math-from-datetime-import-datetime-date-import-requests-1733775423453.txt  Pasted-ocker-build-t-suprematist-article-finder-Building-2-9s-7-9--1733830525973.txt  README.md  app.py  pyproject.toml
static/css/: style.css
static/js/: search.js
templates/: base.html  index.html
