[project]
name = "repl-nix-suprematistarticlefinder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "transformers>=4.47.0",
    "torch>=2.5.1",
    "googletrans==3.1.0a0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
]
